<resources>
  <string name="appName">Newton Chess</string>

  <!-- Descriptions -->
  <string name="newtonLogoDescription">An image showing Sir Isaac Newton holding a Java cup</string>
  <string name="friendListIconDescription">A black or white pawn</string>

  <!-- Splash screen -->
  <string name="titleNewton">N e w t o n</string>
  <string name="titleChess">C h e s s</string>
  <string name="titleNewtonVertical">N\ne\nw\nt\no\nn</string>
  <string name="titleChessVertical">C\nh\ne\ns\ns</string>

  <!-- Login screen -->
  <string name="loginScreenTitle">Sign in</string>
  <string name="loginButtonText">Sign in</string>
  <string name="signupButtonText">Sign up</string>
  <string name="usernameTextFieldHint">Username</string>
  <string name="passwordTextFieldHint">Password</string>
  <string name="missingUsernamePasswordSnackbar">Please enter a username and password to continue.</string>
  <string name="missingUsernameSnackbar">You forgot to enter a username.</string>
  <string name="missingPasswordSnackbar">You forgot to enter a password.</string>
  <string name="incorrectPassword">That\'s not the correct password for that user.</string>
  <string name="incorrectUsername">That username doesn\'t exist.</string>
  <string name="failedToCreateToken">The token could not be created, please try again.</string>

  <string name="accountCreationSuccessful">Account created: %1$s</string>
  <string name="somethingWentWrong">Oops, something went wrong! Please try again.</string>
  <string name="accountCreationMissingFields">Please enter a username and password</string>
  <string name="accountCreationUsernameTaken">The requested username has already been taken</string>

  <!-- Main Menu -->
  <string name="mainMenuWelcome">Welcome</string>
  <string name="playButton">Play</string>
  <string name="startNewGameButton">Start New Game</string>
  <string name="friendsListButton">Friends List</string>
  <string name="logoutButton">Log Out</string>

  <!-- Friends list -->
  <string name="challengeButton">Challenge!</string>
  <string name="addFriendButton">Add friend</string>
  <string name="addedFriendButton">Added</string>
  <string name="emptyListText">There\'s no one here…</string>
  <string name="emptyListTextInanimate">There\'s nothing here…</string>
  <string name="thatsTooBad">That\'s too bad.</string>
  <string name="failedToFetchList">Failed to fetch friends list!</string>
  <string name="fetchingList">Fetching list…</string>
  <string name="standBy">Please stand by…</string>
  <string name="findNewFriends">Find new friends!</string>
  <string name="findFriendsScreenTitle">Find Friends</string>
  <string name="searchButtonText">Search</string>
  <string name="typeSomething">Type something…</string>
  <string name="challengeSentButtonText">Sent</string>
  <string name="challengeNotSentButtonText">Not sent</string>
  <string name="challengeAlreadyExistsSnackbar">You already have a challenge with this user</string>

  <!-- Play screen -->
  <string name="playScreenOpponentLabel">Opponent:</string>
  <string name="playScreenOpponentName">No one!</string>
  <string name="userUnknown">anonymous</string>
  <string name="showGamesText">Games</string>
  <string name="showChallengesText">Challenges</string>
  <string name="accept">Accept</string>
  <string name="deny">Deny</string>
  <string name="viewBoard">View Board</string>
  <string name="turn">Turn</string>
  <string name="turnNum" translatable="false">\?\?\?</string>
  <string name="opponentsTurn">Opponents turn</string>
  <string name="yourTurn">Your turn</string>
  <string name="playerColorDescription">A piece showing which color you\'re playing as.</string>
  <string name="gameOver">Game over</string>
  <string name="refresh">Refresh</string>
  <string name="refreshing">Refreshing...</string>

  <!-- Errors -->
  <string name="tokenInvalid">Your token is invalid, try logging in again.</string>
  <string name="noSuchGame">This game doesn\'t exist, so we can\'t make a move.</string>
  <string name="notPartofGame">You\'re not a part of this game.</string>
</resources>
