<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="@dimen/listViewItemHeight"
  android:background="@color/colorPrimaryDark"
  android:fadingEdge="horizontal"
  android:paddingTop="5dp"
  android:paddingBottom="5dp">

  <ImageView
    android:id="@+id/friendIcon"
    android:layout_width="60dp"
    android:layout_height="wrap_content"
    android:contentDescription="@string/friendListIconDescription"
    android:maxHeight="@dimen/listViewItemHeight"
    android:minHeight="@dimen/listViewItemHeight"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent"
    app:srcCompat="@drawable/wpawn" />

  <TextView
    android:id="@+id/friendName"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:text="@string/userUnknown"
    android:textColor="@color/colorComplementary"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="@+id/friendIcon"
    app:layout_constraintStart_toEndOf="@+id/friendIcon"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/friendsListEntryButton"
    android:layout_width="@dimen/listViewButtonWidth"
    android:layout_height="@dimen/listViewButtonHeight"
    android:layout_marginEnd="10dp"
    android:background="@color/colorPrimary"
    android:hapticFeedbackEnabled="false"
    android:text="@string/challengeButton"
    android:textColor="@color/colorNewtonOrange"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>