<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="@dimen/listViewItemHeight"
  android:background="@color/colorPrimaryDark"
  android:fadingEdge="horizontal"
  android:paddingTop="5dp"
  android:paddingBottom="5dp">

  <TextView
    android:id="@+id/opponentName"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:text="@string/userUnknown"
    android:textColor="@color/colorComplementary"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/gameListEntryButton"
    android:layout_width="@dimen/listViewButtonWidth"
    android:layout_height="@dimen/listViewButtonHeight"
    android:layout_marginEnd="10dp"
    android:background="@color/colorPrimary"
    android:hapticFeedbackEnabled="false"
    android:text="@string/viewBoard"
    android:textColor="@color/colorNewtonOrange"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/turnsTakenContainer"
    android:layout_width="70dp"
    android:layout_height="55dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/gameListEntryButton"
    app:layout_constraintStart_toEndOf="@+id/opponentName"
    app:layout_constraintTop_toTopOf="parent">

    <TextView
      android:id="@+id/turnTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="10dp"
      android:text="@string/turn"
      android:textAlignment="center"
      android:textColor="@color/colorNewtonOrange"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

    <TextView
      android:id="@+id/numberTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginBottom="10dp"
      android:text="@string/turnNum"
      android:textAlignment="center"
      android:textColor="@color/colorNewtonOrange"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.476"
      app:layout_constraintStart_toStartOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>