<?xml version="1.0" encoding="utf-8"?>
<!-- Skriven av Alexander -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:id="@+id/addFriendsConstraintLayout"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  tools:context=".activities.AddFriendActivity">

  <include
    android:id="@+id/newtonChessBanner"
    layout="@layout/newton_chess_banner"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/addFriendsListScreenTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/findFriendsScreenTitle"
    android:textColor="@color/colorPrimary"
    android:textSize="@dimen/headerTextSize"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/newtonChessBanner" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/midpointGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_begin="460dp" />

  <ListView
    android:id="@+id/friendsListView"
    android:layout_width="@dimen/listViewWidth"
    android:layout_height="@dimen/listViewHeight"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/searchFriendsEditText" />

  <TextView
    android:id="@+id/emptyListTextViewTop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fetchingList"
    android:textColor="@color/colorComplementary"
    android:textSize="@dimen/emptyListTextSize"
    android:visibility="invisible"
    app:layout_constraintBottom_toTopOf="@+id/midpointGuideline"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/emptyListTextViewBottom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/standBy"
    android:textColor="@color/colorComplementary"
    android:textSize="@dimen/emptyListTextSize"
    android:visibility="invisible"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/midpointGuideline" />

  <EditText
    android:id="@+id/searchFriendsEditText"
    android:layout_width="@dimen/searchTextFieldWidth"
    android:layout_height="@dimen/searchButtonHeight"
    android:layout_marginStart="10dp"
    android:layout_marginTop="25dp"
    android:hint="@string/typeSomething"
    android:importantForAutofill="no"
    android:inputType="text"
    android:textColor="@color/colorPrimaryDark"
    android:textColorHint="@color/colorPrimaryDark"
    android:textSize="@dimen/searchTextFieldFontSize"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/addFriendsListScreenTitle" />

  <Button
    android:id="@+id/searchFriendsButton"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_marginTop="25dp"
    android:background="@color/colorPrimaryDark"
    android:text="@string/searchButtonText"
    android:textColor="@color/colorComplementary"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toEndOf="@+id/searchFriendsEditText"
    app:layout_constraintTop_toBottomOf="@+id/addFriendsListScreenTitle" />

</androidx.constraintlayout.widget.ConstraintLayout>