<?xml version="1.0" encoding="utf-8"?>
<!-- Skapad av Sebastian, modifierad av Alexander -->

<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  tools:context=".activities.MainMenuActivity"
  android:background="@color/colorBackground">

  <include
    android:id="@+id/newtonChessBanner"
    layout="@layout/newton_chess_banner"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainMenuButtonContainer"
    android:layout_width="@dimen/mainMenuButtonWidth"
    android:layout_height="@dimen/mainMenuButtonConstraintLayoutHeight"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/mainMenuHeaderContainer">

    <Button
      android:id="@+id/friendsListButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/buttonSpacing"
      android:width="@dimen/mainMenuButtonWidth"
      android:height="@dimen/mainMenuButtonHeight"
      android:background="@color/colorPrimaryDark"
      android:text="@string/friendsListButton"
      android:textAlignment="center"
      android:textColor="@color/colorComplementary"
      android:textSize="@dimen/mainMenuButtonTextSize"
      app:layout_constraintTop_toBottomOf="@+id/playButton" />

    <Button
      android:id="@+id/newGameButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/buttonSpacing"
      android:width="@dimen/mainMenuButtonWidth"
      android:height="@dimen/mainMenuButtonHeight"
      android:background="@color/colorPrimaryDark"
      android:text="@string/startNewGameButton"
      android:textAlignment="center"
      android:textColor="@color/colorComplementary"
      android:textSize="@dimen/mainMenuButtonTextSize"
      app:layout_constraintTop_toBottomOf="@+id/friendsListButton" />

    <Button
      android:id="@+id/playButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:width="@dimen/mainMenuButtonWidth"
      android:height="@dimen/mainMenuButtonHeight"
      android:background="@color/colorPrimaryDark"
      android:text="@string/playButton"
      android:textAlignment="center"
      android:textColor="@color/colorComplementary"
      android:textSize="@dimen/mainMenuButtonTextSize"
      app:layout_constraintTop_toTopOf="parent" />

    <Button
      android:id="@+id/logoutButton"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_marginTop="@dimen/buttonSpacing"
      android:width="@dimen/mainMenuButtonWidth"
      android:height="@dimen/mainMenuButtonHeight"
      android:background="@color/colorPrimaryDark"
      android:text="@string/logoutButton"
      android:textAlignment="center"
      android:textColor="@color/colorComplementary"
      android:textSize="@dimen/mainMenuButtonTextSize"
      app:layout_constraintTop_toBottomOf="@+id/newGameButton" />
  </androidx.constraintlayout.widget.ConstraintLayout>

  <androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/mainMenuHeaderContainer"
    android:layout_width="match_parent"
    android:layout_height="@dimen/mainMenuHeaderConstraintLayoutHeight"
    android:layout_marginTop="10dp"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/newtonChessBanner">

    <TextView
      android:id="@+id/userNameTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/userUnknown"
      android:textAlignment="center"
      android:textColor="@color/colorPrimary"
      android:textSize="@dimen/headerTextSize"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintRight_toRightOf="parent" />

    <TextView
      android:id="@+id/welcomeTextView"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/mainMenuWelcome"
      android:textAlignment="center"
      android:textColor="@color/colorPrimary"
      android:textSize="@dimen/headerTextSize"
      android:textStyle="bold"
      app:layout_constraintLeft_toLeftOf="parent"
      app:layout_constraintLeft_toRightOf="parent"
      app:layout_constraintTop_toTopOf="parent" />
  </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>