<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  android:layout_width="match_parent"
  android:layout_height="@dimen/listViewItemHeight"
  android:background="@color/colorPrimaryDark"
  android:fadingEdge="horizontal"
  android:paddingTop="5dp"
  android:paddingBottom="5dp">

  <Button
    android:id="@+id/challengeListDenyButton"
    android:layout_width="@dimen/challengeReplyButtonWidth"
    android:layout_height="@dimen/challengeReplyButtonHeight"
    android:layout_marginEnd="10dp"
    android:width="@dimen/challengeReplyButtonWidth"
    android:background="@color/denyRed"
    android:hapticFeedbackEnabled="false"
    android:maxWidth="@dimen/challengeReplyButtonWidth"
    android:text="@string/deny"
    android:textColor="@android:color/black"
    android:textSize="@dimen/challengeReplyButtonText"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toStartOf="@+id/challengeListAcceptButton"
    app:layout_constraintTop_toTopOf="parent" />

  <Button
    android:id="@+id/challengeListAcceptButton"
    android:layout_width="@dimen/challengeReplyButtonWidth"
    android:layout_height="@dimen/challengeReplyButtonHeight"
    android:layout_marginEnd="10dp"
    android:layout_weight="1"
    android:width="@dimen/challengeReplyButtonWidth"
    android:background="@color/acceptGreen"
    android:maxWidth="@dimen/challengeReplyButtonWidth"
    android:text="@string/accept"
    android:textColor="@android:color/black"
    android:textSize="@dimen/challengeReplyButtonText"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

  <TextView
    android:id="@+id/challengerName"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:layout_marginStart="10dp"
    android:text="@string/userUnknown"
    android:textColor="@color/colorComplementary"
    android:textSize="24sp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>