<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:background="@color/colorBackground"
  tools:context=".activities.FriendsListActivity">

  <TextView
    android:id="@+id/emptyListTextViewTop"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/fetchingList"
    android:textColor="@color/colorComplementary"
    android:textSize="@dimen/emptyListTextSize"
    app:layout_constraintBottom_toTopOf="@+id/emptyListTextViewBottom"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent" />

  <TextView
    android:id="@+id/emptyListTextViewBottom"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/standBy"
    android:textColor="@color/colorComplementary"
    android:textSize="@dimen/emptyListTextSize"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="@+id/midpointGuideline" />

  <androidx.constraintlayout.widget.Guideline
    android:id="@+id/midpointGuideline"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    app:layout_constraintGuide_percent="0.5" />

  <include
    android:id="@+id/include"
    layout="@layout/newton_chess_banner" />

  <ListView
    android:id="@+id/friendsListView"
    android:layout_width="@dimen/listViewWidth"
    android:layout_height="@dimen/listViewHeight"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/include" />

  <TextView
    android:id="@+id/friendsListScreenTitle"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/friendsListButton"
    android:textColor="@color/colorPrimary"
    android:textSize="@dimen/headerTextSize"
    app:layout_constraintBottom_toTopOf="@+id/friendsListView"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/include" />

</androidx.constraintlayout.widget.ConstraintLayout>
